fix height for secondary divs which were too small for the paragraphs on certain device widths

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {
   height: 50vh;
 }
 .secondary {
-  height: 50%;
+  height: 60%;
   margin: 10px 0 0;
 }
 #extra {
@@ -52,7 +52,7 @@ h1, h2, p {
 @media screen and (min-width: 612px) {
   .secondary {
     width: 47.5%;
-    height: 100%;
+    height: 70%;
     float: left;
   }
   #leftcol {
